test/parser/Queries/syntax_errors/fail_K-ForExprPositionalVar-2.xq
(:**foo****** $ ***** let *******foo******* where ****************** for * eq *** $ **:)
: Test:K-ForExprPositionalVar-2  $     eq                  ne     eq :)
(:  where Written by: Frans Englich    where           ne           foo    where     eq  :)(: Date: 2006-10-05T18:29:37+02:00    let       for              : ne )
(: Purpose: Position variable which is not in scope.     :)
(:*********** $ ********************* $ * $ ************** $ **:)
for $ at where  $p1 in 1, 2), ne  $b at eq  $p2 in  $ (1, 2), $c at $p3 in (1,  where 2return 1, let  $p1